fixed alignment glitch for initial review page for IE

--- a/app/stylesheets/partials/_events.scss
+++ b/app/stylesheets/partials/_events.scss
@@ -118,9 +118,6 @@
         width: 88px;
       }
     }
-    .review_scores {
-      @include column(6);
-    }
     textarea{
       @include column(8);
 
